--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   },
   "main": "server.js",
   "scripts": {
-    "start": "tsc; cd build; node server.js"
+    "start": "tsc; node build/server.js"
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
@@ -19,9 +19,21 @@
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
     "passport-jwt": "^2.1.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "reflect-metadata": "^0.1.12",
+    "typegoose": "^5.0.0"
   },
   "devDependencies": {
-    "@types/node": "^9.6.5"
+    "@types/bcrypt-nodejs": "0.0.30",
+    "@types/body-parser": "^1.16.8",
+    "@types/cors": "^2.8.3",
+    "@types/express": "^4.11.1",
+    "@types/jsonwebtoken": "^7.2.6",
+    "@types/mongoose": "^5.0.9",
+    "@types/morgan": "^1.7.35",
+    "@types/node": "^9.6.5",
+    "@types/passport": "^0.4.4",
+    "@types/passport-jwt": "^3.0.1",
+    "@types/passport-local": "^1.0.33"
   }
 }
