--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,10 +1,13 @@
 {
   "compilerOptions": {
+    "strict": true,
     "module": "commonjs",
     "removeComments": true,
     "sourceMap": true,
-    "target": "es5",
-    "outDir": "build"
+    "target": "es6",
+    "outDir": "build",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   },
   "include": [
     "src/**/*.ts"
